test/spec_vectors/store/fail/module_28.wat
(module (memory 1) (func $type-value-empty-in-br (i32.const 0) (block (br 0 (i32.const 0) (i32.store)))))